--- a/klient/admin.html
+++ b/klient/admin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Admin</title>
 </head>
-<body onload="checkadmin()">
+<body onload="checkuser()">
     <div id="menu">
         <ul>
             <li>
