--- a/klient/login.html
+++ b/klient/login.html
@@ -36,7 +36,7 @@
         <input type="text" id="login" placeholder="login">
         <input type="password" id="haslo" placeholder="haslo">
 
-        <button onclick="checklogin()">Zaloguj</button>
+        <button onclick="getuser()">Zaloguj</button>
     </div>
 </div>
 
