--- a/klient/user.html
+++ b/klient/user.html
@@ -25,7 +25,7 @@
                 <a href="user.html">user</a>
             </li>
         </ul>
-        
+        <button onclick="logout()">Wyloguj</button>
     </div>
 
     <div id="content"></div>
